--- a/templates/.detoxrc.json
+++ b/templates/.detoxrc.json
@@ -6,9 +6,8 @@
       "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
       "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
       "type": "android.emulator",
-      "name": "Pixel_API_28_AOSP",
       "device": {
-        "avdName": "Pixel_API_28_AOSP"
+        "avdName": "change_me"
       }
     },
     "android.emu.release": {
@@ -16,7 +15,7 @@
       "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
       "type": "android.emulator",
       "device": {
-        "avdName": "Pixel_API_28_AOSP"
+        "avdName": "change_me"
       }
     }
   }
